examples/ok/t_assm_dec_2phase.zc
../all/t_assm_dec_2phase.zc