examples/fail/t_comp_assm.zc
../all/t_comp_assm.zc